<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:thisApp="http://schemas.android.com/apk/res-auto">

    <!--item
            android:id="@+id/action_new"
            android:orderInCategory="100"
            android:icon="@android:drawable/ic_input_add"
            thisApp:showAsAction="always"
            android:title="@string/menu_title_New"/-->
    <item
        android:id="@+id/action_Chinese258"
        android:orderInCategory="100"
        thisApp:showAsAction="never"
        android:title="@string/menu_title_Chinese258"/>
    <item
        android:id="@+id/action_English_words"
        android:orderInCategory="100"
        thisApp:showAsAction="never"
        android:title="@string/menu_title_English_words"/>
    <item
        android:id="@+id/action_English_chant"
        android:orderInCategory="100"
        thisApp:showAsAction="never"
        android:title="@string/menu_title_English_Chant"/>
    <item
            android:id="@+id/action_Manual"
            android:orderInCategory="100"
            thisApp:showAsAction="never"
            android:title="@string/menu_title_Manual"/>
    <item
        android:id="@+id/action_self_defined"
        android:orderInCategory="10"
        thisApp:showAsAction="never"
        android:title="@string/menu_title_self_defined"/>
    <item
            android:id="@+id/action_self_defined_export"
            android:orderInCategory="20"
            thisApp:showAsAction="never"
            android:title="@string/menu_title_self_defined_export"/>

</menu>